changed the logo for site

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <video autoplay loop muted plays-inline class="back-video">
             <source src="./Images/video.mp4">
         </video>
-        <div class="logo"><img src="./images/logob.png" alt="logo" class="logob"></div>
+        <div class="logo" style="color: white; font-family: 'Rubik', sans-serif; font-size: 20px;"><span style="color: #e74d06;">N</span>W</div>
         <div class="nav-links">
             <a href="#about" class="links">About</a>
             <a href="#skillss" class="links">Skills</a>
